# faulkner

./: .gitignore  README.md  SETUP.md  dev.sh
.kiro/specs/journal-notes/: design.md  requirements.md  tasks.md
backend/: .gitignore  README.md  encryption_service.py  main.py  pyproject.toml  storage_backend.py  test.sh  verify.sh
backend/.hypothesis/constants/: 04907aefa080c45c  16d44afee2d84959  18d4f483921a7c74  3da2551bba8014db  ab94465d687c2053
backend/.hypothesis/examples/04e6b3400353b141/: 29f07e4c6127ff9c
backend/.hypothesis/examples/29f07e4c6127ff9c/: d288c0d900d91529
backend/tests/: test_main.py  test_storage_backend.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.test.tsx  App.tsx  types.test.ts  types.ts
frontend/src/components/: JournalStream.css  JournalStream.test.tsx  JournalStream.tsx  MarkdownRenderer.css  MarkdownRenderer.tsx
frontend/src/services/: ApiClient.ts  EncryptionService.test.ts  EncryptionService.ts  IndexedDBService.ts  README.md  StorageService.ts
